[FIX] Close button hidden on mobile screen

--- a/src/Components/Chat/ChatBotWidget.scss
+++ b/src/Components/Chat/ChatBotWidget.scss
@@ -59,6 +59,6 @@ $very-light-gray: #eeeeee;
     }
 
     .rcw-conversation-container.active{
-        height: 100vh;
+        height: 88vh;
     }
 }
